# hotwire

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  com.github.emmanueltouzery.hotwire.desktop
flatpak/: com.github.emmanueltouzery.hotwire.metainfo.xml
resources/: style.css
src/: any_message_parser.rs  colors.rs  config.rs  custom_streams_store.rs  icons.gresource  icons.rs  main.rs  message_parser.rs  message_parsers.rs  packets_read.rs  search_expr.rs  serde_multival.rs  streams.rs  tshark_communication.rs  tshark_communication_raw.rs  tshark_packet.rs
src/http/: code_formatting.rs  http_body_widget.rs  http_details_widget.rs  http_message_parser.rs  http_streams_store.rs  mod.rs  tshark_http.rs
src/http2/: http2_message_parser.rs  http2_streams_store.rs  mod.rs  tshark_http2.rs
src/pgsql/: mod.rs  postgres_details_widget.rs  postgres_message_parser.rs  postgres_streams_store.rs  tshark_pgsql.rs
src/widgets/: comm_info_header.rs  comm_remote_server.rs  comm_target_card.rs  headerbar_search.rs  http_comm_entry.rs  http_comm_remote_server.rs  http_comm_target_card.rs  http_details_widget.rs  http_message_parser.rs  ips_and_streams_treeview.rs  message_parser.rs  messages_treeview.rs  mod.rs  postgres_comm_entry.rs  postgres_details_widget.rs  postgres_message_parser.rs  postgres_parsing.rs  preferences.rs  recent_file_item.rs  search_options.rs  shortcuts.ui  tls_comm_entry.rs  tls_message_parser.rs  win.rs
