[package]
name = "hotwire"
version = "0.1.0"
authors = ["Emmanuel Touzery <etouzery@gmail.com>"]
edition = "2018"

[build-dependencies]
reqwest = { version = "0.11.0", features = ["blocking"] }
flate2 = "1.0.20"
tar = "0.4.32"
includedir_codegen = "0.6.0"

[dependencies]
serde = "1.0.123"
serde_json = "1.0.64"
itertools = "0.10.0"

# relm: take in style_class after 0.21
relm = { git = "https://github.com/antoyo/relm", rev = "1e4dee58f2536857420756b533f0673e60beffa7" }
relm-derive = { git = "https://github.com/antoyo/relm", rev = "1e4dee58f2536857420756b533f0673e60beffa7" }

glib = "0.10.3"
gio = "0.9.1"
hex = "0.4.3"
pango = "0.9.1"
chrono = "0.4.19"
gdk-pixbuf = "0.9.0"
gdk = "0.13.2"
regex = "1.4.5"
xmlparser = "0.13.3"
brotli = "3.3.0"
flate2 = "1.0.20"
quick-xml = "0.22.0"
nix = "0.20.0"
dirs = "3.0.2"
libc = "0.2.97"
signal-hook = "0.3.9"
derive_more = "0.99.14"
# filetime = "0.2.14"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_22_29"]
